HOTFIX to UI to fix invisible buttons in light theme + Added the computer map view page

--- a/esports-scheduler/src/app/globals.css
+++ b/esports-scheduler/src/app/globals.css
@@ -2,9 +2,9 @@
 
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+    --background: #F0EAD6;
+    --foreground: #F0EAD6;
+  }
 
 @theme inline {
   --color-background: var(--background);
@@ -16,7 +16,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #F0EAD6;
-    --foreground: #cbcaf3;
+    --foreground: #F0EAD6;
   }
 }
 
@@ -143,4 +143,10 @@ body {
 .fc .fc-timegrid-slot,
 .fc .fc-col-header-cell {
   border-color: rgba(0,0,0,0.08);
+}
+
+html, body {
+  background: var(--background);
+  color: var(--foreground);
+  color-scheme: light;      /* make inputs/selects render light by default */
 }
